<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.poc.securedeveloperoptions.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SDO" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:entries="@array/sdo_names"
        android:prompt="@string/chose_sdo"
        android:layout_weight="0.08" />

    <Button
        android:id="@+id/btn_create"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="Create File"></Button>

    <Button
        android:id="@+id/btn_sign"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="Sign"></Button>

    <Button
        android:id="@+id/btn_sign_all"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="Sign All"></Button>

</LinearLayout>
